--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
-body {background-image: url(assets/img/Background.jpg);}
+body {
+    background-image: url(assets/img/Background.jpg);
+}
+.myphoto {
+    margin: 5px 5px 5px 50px;
+    box-shadow: 0 0 10px 5px;
+    border-radius: 140px;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+}
