--- a/style.css
+++ b/style.css
@@ -1,8 +1,28 @@
+html {
+    scroll-behavior: smooth; 
+  }
 * {
     box-sizing: border-box;
 }
 body {
     background-image: url(assets/img/Background.jpg);
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+.nav-list {
+    list-style: none;
+    margin: 0 15px;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    transition: .3s;
 }
 .myphoto {
     margin: 5px 5px 5px 150px;
@@ -12,11 +32,8 @@ body {
     max-width: 400px;
     height: auto;
 }
-.spanh {
+.span {
     margin: 0 15px;
-    font-size: 20px;
-}
-.header {
-    text-align: center;
-    
+    font-size: 25px;
+    font-weight: 600;
 }
