--- a/style.css
+++ b/style.css
@@ -25,15 +25,20 @@ body {
     transition: .3s;
 }
 .myphoto {
-    margin: 5px 5px 5px 150px;
+    margin: 5px 5px 5px 30%;
     box-shadow: 0 0 15px 5px;
     border-radius: 140px;
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     height: auto;
 }
 .span {
     margin: 0 15px;
     font-size: 25px;
     font-weight: 600;
+}
+.contacts {
+    float: right;
+    justify-content: center;
+    margin-right: 30%;
 }
