--- a/style.css
+++ b/style.css
@@ -6,15 +6,18 @@ html {
 }
 body {
     background-image: url(assets/img/Background.jpg);
-    font-family: 'Roboto', sans-serif;
+    font-family: Lucida Console, monospace;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .nav-list {
     list-style: none;
-    margin: 0 15px;
-    font-size: 25px;
+    margin: 0 20px;
+    font-size: 22px;
     font-weight: 600;
     text-align: center;
     margin-bottom: 40px;
@@ -31,6 +34,7 @@ body {
     width: 100%;
     max-width: 300px;
     height: auto;
+    float: left;
 }
 .span {
     margin: 0 15px;
@@ -38,7 +42,51 @@ body {
     font-weight: 600;
 }
 .contacts {
-    float: right;
-    justify-content: center;
-    margin-right: 30%;
+    justify-content: center;  
+}
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.nav-item a {
+    color: black;
+    text-decoration: none;  
+    transition: color 0.5s;
+}
+.nav-item a:hover {
+    color: #135c13;
+}
+a {
+    color: black;
+    text-decoration: none;  
+    transition: color 0.3s;
+}
+a:hover {
+    color: #5c1347;
+}
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+} 
+.section {
+    width: 50%;
+}
+@media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+}
+h2 {
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: black;
+}
+h1 {
+    font-size: 35px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: black;
 }
