--- a/style.css
+++ b/style.css
@@ -9,10 +9,14 @@ body {
     font-family: Lucida Console, monospace;
     font-size: 18px;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+main {
+    width: 90%;
+    margin: 0 auto;
 }
 .nav-list {
     list-style: none;
@@ -28,7 +32,7 @@ body {
     transition: .3s;
 }
 .myphoto {
-    margin: 5px 5px 5px 30%;
+    margin: 0px 20px 5px 0;
     box-shadow: 0 0 15px 5px;
     border-radius: 140px;
     width: 100%;
@@ -42,7 +46,10 @@ body {
     font-weight: 600;
 }
 .contacts {
-    justify-content: center;  
+    margin-left: 30%;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
 }
 .container {
     max-width: 1440px;
@@ -89,4 +96,7 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 5px;
     color: black;
+}
+.header {
+    background-color: rgb(183,255,208,0.3);
 }
