--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ main {
     font-size: 22px;
     font-weight: 600;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .nav-link {
