--- a/style.css
+++ b/style.css
@@ -136,40 +136,27 @@ h3 {
     margin-top: 20px;
 }
 
+.code {
+    background-color: rgb(147,157,160,0.5);
+}
+
 .ul-footer {
     display: flex;
     align-items: center;
     list-style: none;
-    padding: 10px 0 0 0;
+    padding: 0;
+    justify-content: center;
 }
 
 .logo-school {
-    width: 100%;
-    max-width: 100px;
+    width: 80px;
     height: auto;
 }
 
 .lifooter {
-    margin: 0 200px;
+    margin: 0 150px;
     font-weight: 600;
     font-size: 20px;
-}
-
-.span-footer {
-    margin: 0 10px;
-}
-
-#div-footer.container {   
-    width: 100%;
-    height: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    overflow: auto;
 }
 
 footer {
@@ -186,6 +173,11 @@ footer {
     color: #135c13;
 }
 
-.code {
-    background-color: rgb(147,157,160,0.5);
+#lifooter1 {
+    margin-right: 2px;
+}
+
+#lifooter2 {
+    margin-left: 2px;
+    font-size: 25px;
 }
